# follow-the-leader

./: .gitignore  README.md
code/: README.md
code/LC/: ReadMe.md
code/LC/Nucleo-F303/: main.c
code/NodeMCU/: FollowTheLeader.ino  ReadMe.md
code/NodeMCU/data/: index.html
code/Nucleo-F303/: Readme.md  main.c  main.h
code/WR/: CMakeLists.txt  README.md  parameters.cfg
code/WR/conf/: enable_CAN.sh  ftl.service  templog.service
code/WR/inc/: LCPositions.h  WRPosition.h  can.h  can.h~  can_protocol.h  dist_to_path.h  path_alg.h  pid.h  prints.h  protocol.h  protocol.h~
code/WR/lib/sbgECom/examples/ekinoxMinimal/projects/visual/: ekinoxMinimal.vcxproj
code/WR/lib/sbgECom/examples/ekinoxMinimal/src/: ekinoxMinimal.c
code/WR/lib/sbgECom/examples/ellipseMinimal/src/: ellipseMinimal.c
code/WR/lib/sbgECom/examples/ellipseOnboardMagCalib/projects/visual/: ellipseOnboardMagCalib.vcxproj
code/WR/lib/sbgECom/projects/visual/: sbgECom.vcxproj  sbgECom.vcxproj.filters
code/WR/src/: LCPositions.cpp  WRPosition.cpp  can.cpp  can.cpp~  dist_to_path.cpp  main.cpp  path_alg.cpp  pid.cpp  prints.cpp  protocol.cpp  protocol.cpp~
code/etc/: getSystemInformation.py
documentation/: Ellipse2D_info.md
model/: follow_the_leader_library.slx  plot_wr_and_coordinates.m
model/model/: wr_model.slx
model/s-functions/: build.m  s_path_alg.cpp
simulation/: README.md  simulation_environment.slx  slblocks.m  test_path.txt  wr_data.m
simulation/etc/: deg2utm.m
simulation/model/: calculation_of_thrust.slx  wr_model_conversion_data.mat
simulation/s-functions/: build.m
(+6 files in other folders)
